# raimad

./: -  .dmypy.json  .gitignore  DeshimaDemoRun.py  README.md  Sample.cif  Snowman.cif  a  compose.yml  coverage.json  foo.cif  fuzz_float.py  notes.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.lyp  tester.py  ttest.py  wtf.py
.github/workflows/: draft-pdf.yml  test-lint-check.yml
PyCIF/: Alignable.py  BBox.py  Component.py  Context.py  Dotdict.py  LayerParams.py  Markable.py  Point.py  PointRef.py  Polygon.py  PolygonGroup.py  SampleComponent.py  Transform.py  __init__.py  __main__.py  cli.py  logging.py  typing.py
PyCIF/draw/: Alignable.py  BBox.py  BBoxable.py  BoundPoint.py  Component.py  Constructor.py  Context.py  Group.py  Layer.py  LayerCategory.py  LayerParams.py  Mark.py  Markable.py  OptCategory.py  Option.py  Optspec.py  Partial.py  Point.py  PointRef.py  Polygon.py  PolygonGroup.py  Snowman.py  Transform.py  Transformable.py  TransformedPoint.py  angles.py
PyCIF/exporters/: CIFExporter.py  SVGExporter.py  argparse_utils.py  cif.py  svg.py
PyCIF/geom/: Vector.py
PyCIF/helpers/: angles.py  draw.py  introspection.py  iter.py  overload.py
PyCIF/misc/: encapsulation.py  import_from_string.py
PyCIF/modulebrowser/: Modulebrowser.py
PyCIF/viz/: __init__.py  simplesvg.py
PyClewinSDC/: Alignable.py  BBox.py  Component.py  Context.py  Dotdict.py  Layer.py  LayerParams.py  Markable.py  Modulebrowser.py  OptCategory.py  Point.py  PointRef.py  Polygon.py  PolygonGroup.py  State.py  Transform.py  Transformable.py
PyClewinSDC/Modulebrowser/: Modulebrowser.py
PyClewinSDC/exporters/: CIFExporter.py  Exporter.py  SVGExporter.py
archive/: openjournals-inara-2026-04-10.tar
benchmarks/: matmul.py  norm.py
mypy-experiments/: recursive_iterable.py  vec2_list.py
paper/: paper.bib  paper.md  paper.tidy.bib
paper/jats/: paper.jats
pc_DeshimaDemo/: DeshimaDemo.py
pc_DeshimaDemo2/: DeshimaDemo2.py
pc_DeshimaPort/: Filter.py  __init__.py
pc_Fundamental/: Antennas.py  Filter.py  Mesh.py  __init__.py
pc_LeakyAntenna/: LeakyAntennaExample.py  __init__.py
pycif/: __init__.py  __main__.py  cli.py  err.py  typing.py
pycif/draw/: BBox.py  BBoxable.py  BoundPoint.py  Compo.py  Component.py  Group.py  Layer.py  Mark.py  Markable.py  Option.py  Partial.py  Point.py  Poly.py  Polygon.py  Snowman.py  Transform.py  Transformable.py
pycif/exporters/: __init__.py  argparse_utils.py  cif.py  svg.py
pycif/helpers/: angles.py  docparse.py  draw.py  hackery.py  import_from_string.py  introspection.py  slots.py
pycif/modulebrowser/: Modulebrowser.py
pycif/viz/: simplesvg.py  sixel.py
reference/: README.md
reference/raidithers/: carrot.xbm  oni.xbm  pebble.xbm  raimad.xbm  snow.xbm  stratal.xbm  tifuun.xbm  tifuunalt.xbm
scripts/: get_klayout_dither_patterns.sh  mirror-carrot.py  paper-archive-image-rootless.sh  paper-bibtex-line-breaks.py  paper-bibtex-tidy-install.sh  paper-bibtex-tidy.sh  paper-compile-rootless.sh  paper-pull-image-rootless.sh  patch_dunder_all.py  patch_klayout_dither_patterns.py  patch_raidithers.py  raidither_demo.py
src/pycif/: AnSec.py  BBox.py  BoundPoint.py  Compo.py  Layer.py  Mark.py  Option.py  Proxy.py  RectWire.py  Transform.py  __init__.py  affine.py  ansec.py  bbox.py  boundpoint.py  cif.py  circle.py  cli.py  compo.py  custompoly.py  debug.py  dictlist.py  docparse.py  empty.py  err.py  fortunes.py  graphviz.py  helpers.py  iters.py  layer.py  logging.py  mark.py  option.py  partial.py  proxy.py  rectwh.py  rectwire.py  snowman.py  string_import.py  svg.py  (+2 more)
src/raimad/: __init__.py  __main__.py  affine.py  annotation.py  ansec.py  bbox.py  boundbbox.py  boundpoint.py  cif.py  circle.py  cli.py  compo.py  containers.py  custompoly.py  debug.py  debugging.py  dictlist.py  docparse.py  empty.py  err.py  fortune.py  fortunes.py  graphviz.py  helpers.py  iters.py  jupyter.py  (+17 more)
tests/: test_affine.py  test_angspace.py  test_ansec.py  test_atsyntax.py  test_bbox.py  test_boundpoint.py  test_check_marks.py  test_cif.py  test_cif_100.py  test_cif_depth.py  test_cif_layer_names.py  test_cif_noreuse.py  test_cif_reuse.py  test_cift.py  test_cli.py  test_compo.py  test_compo_creation.py  test_compoclass_annots.py  test_compoclass_introspect.py  test_component_creation.py  test_coorinates.py  test_custom_base.py  test_dictlist.py  test_export_cif.py  test_export_svg.py  test_geoms_equal_mixin.py  test_helpers.py  test_hflip_vflip.py  test_layers.py  test_lmap.py  test_lyp.py  test_marks.py  test_named_subcompos.py  test_new_editing.py  test_new_editing_weird_points.py  test_options.py  test_polys.py  test_proxy.py  test_rectwire.py  test_snowman.py  (+5 more)
(+69 files in other folders)
