[build-system]

# For some reason, not including the minimum version bound
# causes pip to not install setuptools at all?
# At least, when giving `setuptools` without a version,
# I get an error that it can't find module `distutils`

requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raimad"
version = "1.2.0"
description = """RAIMAD Astronomical Instrument MAsk Designer"""
authors = [
	{name = "maybetree", email = "maybetree48@proton.me"}
	]
license = { file = "LICENSE.md" }
readme = "README.md"
classifiers = [
	'Programming Language :: Python :: 3',
	]
requires-python = ">=3.10"
dependencies = [
    'typing-extensions',
	]

# This lets people use `raimad` directly as a shell command
# instead of `python -m raimad`
[project.scripts]
raimad = "raimad.cli:cli"

[tool.ruff.lint]
exclude = [
    "tests/*",
    "benchmarks/*",
    #"docparse.py",  # TODO finish docstrings
    #"boundpoint.py",  # TODO finish docstrings
    #"ansec.py",  # TODO finish docstrings
    #"bbox.py",  # TODO finish docstrings
    ]
select = [
    "E",
    "F",
    "D",
    ]
ignore = [
    "D106",
    # Allow no docstring in nested classes
    # (e.g. Layers, Options, Marks classes)
    "D401",  # don't complain about "imperative mood"
    ]
[tool.ruff.lint.pydocstyle]
convention = "numpy"

