[build-system]

# For some reason, not including the minimum version bound
# causes pip to not install setuptools at all?
# At least, when giving `setuptools` without a version,
# I get an error that it can't find module `distutils`

requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raimad"
version = "1.2.5"
description = """RAIMAD Astronomical Instrument MAsk Designer"""
authors = [
	{name = "maybetree", email = "maybetree48@proton.me"}
	]
license = "GPL-3.0-only"
readme = "README.md"
classifiers = [
	'Programming Language :: Python :: 3',
	]
requires-python = ">=3.10"
dependencies = [
    'typing-extensions',
	]

[project.optional-dependencies]
dev = [
	"numpy",
	"cift",
	"mypy",
	"ipython",
	]

# This lets people use `raimad` directly as a shell command
# instead of `python -m raimad`
[project.scripts]
raimad = "raimad.cli:cli"

[tool.ruff.lint]
exclude = [
    "tests/*",
    "benchmarks/*",
    #"docparse.py",  # TODO finish docstrings
    #"boundpoint.py",  # TODO finish docstrings
    #"ansec.py",  # TODO finish docstrings
    #"bbox.py",  # TODO finish docstrings
    ]
select = [
    "E",
    "F",
    "D",
    ]
ignore = [
    "D106",
    # Allow no docstring in nested classes
    # (e.g. Layers, Options, Marks classes)
    "D401",  # don't complain about "imperative mood"
    "D202",  # Allow blank line after docstring
    ]

[tool.ruff.lint.pydocstyle]
convention = "numpy"


[tool.mypy]
strict = true
exclude = [
	'tests/test_cif_noreuse.py',  # TODO cift type hints!
	'tests/test_cif_layer_names.py',  # TODO cift type hints!
	]

# don't complain about missing -> None return annotation
# in test methods
[[tool.mypy.overrides]]
strict = false
module = 'tests.*'
disallow_untyped_defs = false

# Don't complain about missing attributes in test utils file.
# This file relies heavily on mixins,
# and type-hinting mixins -- especially mixins that
# all depend on one another -- is a pants-backward tedious process
# that produces tons of incomprehensible typing.Protocol boilerplate
# (see https://stackoverflow.com/questions/59311963/ 
# and commit 35ed468bde2404876599da74e023837730fc43cd in this repo ),
# all for the dubious benefit of ensuring type safety in code
# that, almost by-defenition, has 100% runtime coverage,
# and never runs on the end-user's machine.
[[tool.mypy.overrides]]
strict = false
module = 'tests.utils'
disable_error_code = ["attr-defined"]

